test/files/neg/depmet_1.check
depmet_1.scala:2: error: illegal dependent method type: parameter appears in the type of another parameter in the same section or an earlier one
  def precise0(y: x.type)(x: String): Unit = {}
                          ^
depmet_1.scala:3: error: illegal dependent method type: parameter appears in the type of another parameter in the same section or an earlier one
  def precise1(x: String, y: x.type): Unit = {}
               ^
depmet_1.scala:4: error: not found: value y
  def precise2[T <: y.type](y: String): Unit = {}
                    ^
three errors found
